@@ -1,3 +1,4 @@
+/* Licensed under EPL-2.0 2024. */
 package edu.kit.kastel.sdq.artemis4j.client;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -6,21 +7,12 @@ import edu.kit.kastel.sdq.artemis4j.ArtemisNetworkException;
 import java.util.Arrays;
 import java.util.List;
 
-public record CourseDTO(
-        @JsonProperty int id,
-        @JsonProperty String title,
-        @JsonProperty String shortName,
-        @JsonProperty String instructorGroupName,
-        @JsonProperty int numberOfInstructors,
-        @JsonProperty int numberOfTeachingAssistants,
-        @JsonProperty int numberOfEditors,
-        @JsonProperty int numberOfStudents
-) {
+public record CourseDTO(@JsonProperty int id, @JsonProperty String title, @JsonProperty String shortName, @JsonProperty String instructorGroupName,
+		@JsonProperty int numberOfInstructors, @JsonProperty int numberOfTeachingAssistants, @JsonProperty int numberOfEditors,
+		@JsonProperty int numberOfStudents) {
 
-    public static List<CourseDTO> fetchAll(ArtemisClient client) throws ArtemisNetworkException {
-        var courses = ArtemisRequest.get()
-                .path(List.of("courses", "with-user-stats"))
-                .executeAndDecode(client, CourseDTO[].class);
-        return Arrays.asList(courses);
-    }
+	public static List<CourseDTO> fetchAll(ArtemisClient client) throws ArtemisNetworkException {
+		var courses = ArtemisRequest.get().path(List.of("courses", "with-user-stats")).executeAndDecode(client, CourseDTO[].class);
+		return Arrays.asList(courses);
+	}
 }
